--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     <!-- -->
     <!-- Contact Me -->
     <div id="contact">
+      <!-- HackTheBox -->
+      <a href="https://app.hackthebox.eu/profile/243841" title="HackTheBox">
+        <img src="img/logo_htb.png" alt="HackTheBox">
+      </a>
       <!-- root-me -->
       <a href="https://root-me.org/ala0x2" title="root-me">
         <img src="img/logo_rootme.png" alt="root-me">
@@ -57,11 +61,6 @@
       <a href="mailto:alaeddine.adel@etu.u-paris.fr" title="Mail">
         <img src="img/logo_email.png" alt="Mail">
       </a>
-    </div>
-    <!-- -->
-    <!-- HackTheBox -->
-    <div id="badge">
-      <script src="http://www.hackthebox.eu/badge/image/243841"></script>
     </div>
     <!-- -->
   </div>
